UI tweaks, audio

--- a/codebreaker.css
+++ b/codebreaker.css
@@ -278,6 +278,8 @@ figure {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    line-height: 1;
+    margin-top: -.05em;
 }
 
 .gameboard4 > * > * {
